--- a/src/app/components/admin-components/admin-outcome/admin-outcome.component.html
+++ b/src/app/components/admin-components/admin-outcome/admin-outcome.component.html
@@ -1,6 +1,6 @@
 <h4>
-  Derzeitiger Umsatz: <span class="amount">{{outcome?.revenue / 100 | number : '1.2-2'}} {{ currency }}</span>
+  Aktueller Umsatz: <span class="amount">{{outcome?.revenue / 100 | number : '1.2-2'}} {{ currency }}</span>
 </h4>
 <h4>
-  Anzahl Verkäufe: <span class="amount">{{outcome?.sold_items}}</span>
+  Anzahl verkauften Produkte: <span class="amount">{{outcome?.sold_items}}</span>
 </h4>
