--- a/src/app/components/admin-components/create-product/create-product.component.css
+++ b/src/app/components/admin-components/create-product/create-product.component.css
@@ -52,6 +52,10 @@ form {
   display: inline;
 }
 
+.invalid-input {
+  border: solid 1px red;
+}
+
 @media screen and (max-width: 1120px) {
   .create-product-wrapper {
     margin-left: 75px;
