--- a/src/app/components/cart-components/cart-user-information/cart-user-information.component.css
+++ b/src/app/components/cart-components/cart-user-information/cart-user-information.component.css
@@ -3,6 +3,83 @@ input {
   color: var(--font-color);
 }
 
+.invalid-input {
+  border: solid 1px red;
+}
+
 form {
   margin-bottom: unset;
+}
+
+label {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.tooltip {
+  position: relative;
+  text-align: left;
+  height: 1.3em;
+  margin-left: 3px;
+}
+
+.tooltip h3 {margin:12px 0;}
+
+.tooltip .right {
+  min-width:200px;
+  max-width:400px;
+  top:50%;
+  left:100%;
+  margin-left:20px;
+  transform:translate(0, -50%);
+  padding:0;
+  color:#EEEEEE;
+  background-color: var(--c7);
+  font-weight:normal;
+  font-size:13px;
+  border-radius:8px;
+  position:absolute;
+  z-index:99999999;
+  box-sizing:border-box;
+  box-shadow:0 1px 8px rgba(0,0,0,0.5);
+  visibility:hidden; opacity:0; transition:opacity 0.8s;
+}
+
+.tooltip:hover .right {
+  visibility:visible; opacity:1;
+}
+
+.tooltip .right img {
+  width: 400px;
+  border-radius: 0.5em 0.5em 0 0;
+}
+.tooltip .text-content {
+  padding: 10px 20px;
+}
+
+.tooltip .right i {
+  position: absolute;
+  top: 50%;
+  right: 100%;
+  margin-top: -12px;
+  width: 12px;
+  height: 24px;
+  overflow: hidden;
+}
+.tooltip .right i::after {
+  content: '';
+  position: absolute;
+  width: 12px;
+  height: 12px;
+  left: 0;
+  top: 50%;
+  transform: translate(50%,-50%) rotate(-45deg);
+  background-color: var(--c7);
+  box-shadow: 0 1px 8px rgba(0,0,0,0.5);
+}
+
+h6 {
+  font-size: 1.3rem;
+  margin-bottom: 0;
 }
