--- a/src/app/components/detail-components/order-detail/order-detail.component.html
+++ b/src/app/components/detail-components/order-detail/order-detail.component.html
@@ -38,11 +38,11 @@
 
 
     <button class="refresh-page-button" *ngIf="currentOrder?.status === 'accepted'
-      && currentOrder?.invoice != null && currentOrder?.invoice != '' && !currentOrder?.delivery_status" (click)="refreshPageButtonEvent()">
+      && currentOrder?.invoice != null && currentOrder?.invoice != '' && !currentOrder?.deliveryStatus" (click)="refreshPageButtonEvent()">
       <span>Lieferstatus noch nicht verfügbar.<br/> Bitte versuchen Sie es in 5 min erneut!</span>
     </button>
 
-    <div *ngIf="currentOrder?.delivery_status" class="delivery">
+    <div *ngIf="currentOrder?.deliveryStatus" class="delivery">
       <table class="delivery-info-table" cellspacing="0">
         <tbody>
           <tr class="delivery-row">
@@ -52,7 +52,7 @@
           </tr>
           <tr class="delivery-row">
             <td class="delivery-column">
-              <h6 class="delivery-status">{{ currentOrder?.delivery_status.status }}</h6>
+              <h6 class="delivery-status">{{ currentOrder?.deliveryStatus.status }}</h6>
             </td>
           </tr>
           <tr class="delivery-row">
@@ -62,7 +62,7 @@
           </tr>
           <tr class="delivery-row">
             <td class="delivery-column">
-              <span class=delivery-comment>{{ currentOrder?.delivery_status.comment }}</span>
+              <span class=delivery-comment>{{ currentOrder?.deliveryStatus.comment }}</span>
             </td>
           </tr>
         </tbody>
