--- a/src/app/components/cart-components/cart-user-information/cart-user-information.component.html
+++ b/src/app/components/cart-components/cart-user-information/cart-user-information.component.html
@@ -1,6 +1,12 @@
 <form class="user-information-form" [formGroup]="informationForm" autocomplete="off">
   <fieldset>
-      <label for="email">Mailadresse</label>
+    <div class="user-person-data">
+      <label for="name">Name</label>
+      <input id="name" type="text" formControlName="name" placeholder="Max Mustermann" maxlength="50"
+        [class.invalid-input]="informationForm.controls['name'].invalid
+        && (informationForm.controls['name'].dirty || informationForm.controls['name'].touched)"/>
+
+      <label for="email">E-Mailadresse</label>
       <input id="email" type="email" formControlName="email" placeholder="Mailadresse"
           [class.invalid-input]="informationForm.controls['email'].invalid
           && (informationForm.controls['email'].dirty || informationForm.controls['email'].touched)"/>
@@ -9,40 +15,40 @@
       <input #cc id="cardNumber" type="tel" maxlength="20" formControlName="card" placeholder="Kartennummer" (keyup)="handleCreditCards()"
         [class.invalid-input]="informationForm.controls['card'].invalid
         && (informationForm.controls['card'].dirty || informationForm.controls['card'].touched)"/>
+    </div>
 
-      <label for="country">Land
-        <div class="tooltip">
-          <div class="icon" icon iconName="info-circle"></div>
-          <div class="right">
-            <div class="text-content">
-              <h6>Das Land bitte auf englisch eingeben, da ansonsten die Lieferschnittstelle Probleme mit der Erkennung hat</h6>
-            </div>
-          </div>
-        </div>
-      </label>
-      <input id="country" type="text" formControlName="country" placeholder="Germany" maxlength="30"
-        [class.invalid-input]="informationForm.controls['country'].invalid
-        && (informationForm.controls['country'].dirty || informationForm.controls['country'].touched)"/>
+    <div class="user-address-data">
+      <label for="address1">Adresse</label>
+      <input id="address1" type="text" formControlName="address1" placeholder="Musterstr. 1" maxlength="100"
+        [class.invalid-input]="informationForm.controls['address1'].invalid
+        && (informationForm.controls['address1'].dirty || informationForm.controls['address1'].touched)"/>
 
-      <label for="state">Bundesland</label>
-      <input id="state" type="text" formControlName="state" placeholder="Bundesland" maxlength="30"/>
+      <label for="address2">Adresszusatz</label>
+      <input id="address2" type="text" formControlName="address2" placeholder="2. Stockwerk Links" maxlength="100"/>
+
+      <label for="country">Land</label>
+      <select id="country" formControlName="country" [class.invalid-input]="informationForm.controls['country'].invalid
+      && (informationForm.controls['country'].dirty || informationForm.controls['country'].touched)">
+        <option value="" disabled>Land auswählen</option>
+        <option *ngFor="let country of allCountryNamesInGerman" [ngValue]="country.code">{{country.name}}</option>
+      </select>
+
+      <label for="state">Bundesland/Staat</label>
+      <input id="state" type="text" formControlName="state" placeholder="Bundesland" maxlength="30"
+        [class.invalid-input]="informationForm.controls['state'].invalid
+        && (informationForm.controls['state'].dirty || informationForm.controls['state'].touched)"/>
 
       <label for="city">Stadt</label>
-      <input id="city" type="text" formControlName="city" placeholder="Stadt" maxlength="30"/>
+      <input id="city" type="text" formControlName="city" placeholder="Stadt" maxlength="30"
+        [class.invalid-input]="informationForm.controls['city'].invalid
+        && (informationForm.controls['city'].dirty || informationForm.controls['city'].touched)"/>
 
       <label for="zip">Postleitzahl</label>
-      <input id="zip" type="number" formControlName="zip" placeholder="Postleitzahl"/>
-
-      <label for="name">Name</label>
-      <input id="name" type="text" formControlName="name" placeholder="Name" maxlength="50"/>
-
-      <label for="address1">Adresse 1</label>
-      <input id="address1" type="text" formControlName="address1" placeholder="Adresse 1" maxlength="100"/>
-
-      <label for="address2">Adresse 2</label>
-      <input id="address2" type="text" formControlName="address2" placeholder="Adresse 2" maxlength="100"/>
-
-
-      <button class="button" (click)="onSubmit()"> Jetzt {{cartSum / 100 | number : '1.2-2'}} Bezahlen</button>
+      <input id="zip" type="number" formControlName="zip" placeholder="Postleitzahl"
+        [class.invalid-input]="informationForm.controls['zip'].invalid
+        && (informationForm.controls['zip'].dirty || informationForm.controls['zip'].touched)"/>
+    </div>
   </fieldset>
+
+  <button class="button" (click)="onSubmit()"> Jetzt {{cartSum / 100 | number : '1.2-2'}} Bezahlen</button>
 </form>
