Add evniorment variables

--- a/src/app/components/cart-components/cart-item-list/cart-item-list.component.html
+++ b/src/app/components/cart-components/cart-item-list/cart-item-list.component.html
@@ -6,7 +6,7 @@
     <tr>
       <td class="cart-sum-cell"></td>
       <td class="cart-sum-cell">Summe</td>
-      <td class="cart-sum-cell">{{totalSum / 100 | number : '1.2-2'}} EUR</td>
+      <td class="cart-sum-cell">{{totalSum / 100 | number : '1.2-2'}} {{ shopCurrency }}</td>
       <td class="cart-sum-cell"></td>
       <td></td>
     </tr>
