--- a/src/app/components/admin-components/create-product/create-product.component.html
+++ b/src/app/components/admin-components/create-product/create-product.component.html
@@ -43,8 +43,8 @@
           && (informationForm.controls['image'].dirty || informationForm.controls['image'].touched)"/>
 
 
-        <label for="button"></label>
-        <input id="button" type="button" class="button" (click)="onSubmit()" value="Produkt anlegen">
+        <label for="createProductButton"></label>
+        <input id="createProductButton" type="button" class="button" (click)="onSubmit()" value="Produkt anlegen">
       </fieldset>
 
     </form>
